Bug 1638793 - Ensure OriginAttributes is set on OpenWindowInfo for expanded principals, r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D79471